--- a/SaltSideAssignment/SaltSideAssignment/Base.lproj/Main.storyboard
+++ b/SaltSideAssignment/SaltSideAssignment/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2ji-cW-rJM">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -33,14 +34,107 @@
                     <view key="view" contentMode="scaleToFill" id="HOM-kd-052">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Su9-tQ-jHq">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="SSRootItemTableViewCell" rowHeight="80" id="9au-Tt-OkP" customClass="SSRootItemTableViewCell" customModule="SaltSideAssignment" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="600" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9au-Tt-OkP" id="lgR-FE-SYE">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="faz-Zj-5c1" userLabel="Container View">
+                                                    <rect key="frame" x="5" y="13" width="590" height="54"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sMR-gl-qre">
+                                                            <rect key="frame" x="5" y="5" width="80" height="44"/>
+                                                            <animations/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="80" id="paG-Dw-K14"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VPc-gW-kRW" userLabel="Title Label">
+                                                            <rect key="frame" x="93" y="17" width="492" height="21"/>
+                                                            <animations/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="21" id="FAf-Br-mn9"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <animations/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstItem="VPc-gW-kRW" firstAttribute="centerY" secondItem="faz-Zj-5c1" secondAttribute="centerY" id="8AU-qZ-x4t"/>
+                                                        <constraint firstAttribute="trailing" secondItem="VPc-gW-kRW" secondAttribute="trailing" constant="5" id="Cks-GE-228"/>
+                                                        <constraint firstItem="VPc-gW-kRW" firstAttribute="leading" secondItem="sMR-gl-qre" secondAttribute="trailing" constant="8" id="HSG-ch-Khg"/>
+                                                        <constraint firstItem="sMR-gl-qre" firstAttribute="leading" secondItem="faz-Zj-5c1" secondAttribute="leading" constant="5" id="Qnw-Fv-jbE"/>
+                                                        <constraint firstItem="sMR-gl-qre" firstAttribute="height" secondItem="faz-Zj-5c1" secondAttribute="height" constant="-10" id="YdU-W9-acA"/>
+                                                        <constraint firstItem="sMR-gl-qre" firstAttribute="centerY" secondItem="faz-Zj-5c1" secondAttribute="centerY" id="qjr-B4-DoX"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <animations/>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="faz-Zj-5c1" secondAttribute="trailing" constant="5" id="DsU-3t-uS7"/>
+                                                <constraint firstItem="faz-Zj-5c1" firstAttribute="leading" secondItem="lgR-FE-SYE" secondAttribute="leading" constant="5" id="KZ7-eB-9N8"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="faz-Zj-5c1" secondAttribute="bottom" constant="5" id="X2b-TZ-alr"/>
+                                                <constraint firstItem="faz-Zj-5c1" firstAttribute="top" secondItem="lgR-FE-SYE" secondAttribute="topMargin" constant="5" id="wsB-FZ-eLU"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                        <connections>
+                                            <outlet property="containerView" destination="faz-Zj-5c1" id="VMj-OF-Y4a"/>
+                                            <outlet property="itemImageView" destination="sMR-gl-qre" id="6qn-S7-j9M"/>
+                                            <outlet property="itemImageViewConstraint" destination="paG-Dw-K14" id="d6D-Ik-LU7"/>
+                                            <outlet property="titleLabel" destination="VPc-gW-kRW" id="92d-Sa-gGc"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Su9-tQ-jHq" firstAttribute="top" secondItem="0FZ-RW-Q53" secondAttribute="bottom" constant="-64" id="28O-cS-pkj"/>
+                            <constraint firstAttribute="trailing" secondItem="Su9-tQ-jHq" secondAttribute="trailing" id="HiG-l4-D6y"/>
+                            <constraint firstItem="7WA-lQ-mTQ" firstAttribute="top" secondItem="Su9-tQ-jHq" secondAttribute="bottom" id="LMh-hK-LVf"/>
+                            <constraint firstItem="Su9-tQ-jHq" firstAttribute="leading" secondItem="HOM-kd-052" secondAttribute="leading" id="otk-ZU-0MD"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="CUQ-Rv-v7Z"/>
+                    <connections>
+                        <segue destination="eBF-97-pRB" kind="show" identifier="showSSItemDetailsVC" id="RmL-hd-gkw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4rU-1X-n9y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="659" y="504"/>
+        </scene>
+        <!--Item DetailsVC-->
+        <scene sceneID="J9T-5P-hGd">
+            <objects>
+                <viewController storyboardIdentifier="SSItemDetailsVC" id="eBF-97-pRB" customClass="SSItemDetailsVC" customModule="SaltSideAssignment" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="LD7-6w-zGU"/>
+                        <viewControllerLayoutGuide type="bottom" id="yE8-8v-7Jv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rHW-8C-DVd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Juh-os-oXb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1386" y="504"/>
         </scene>
     </scenes>
 </document>
